--- a/.github/workflows/core-build.yml
+++ b/.github/workflows/core-build.yml
@@ -9,4 +9,4 @@ jobs:
   build:
     uses: azerothcore/reusable-workflows/.github/workflows/core_build_modules.yml@main
     with:
-      module_repo: ${{ github.repository }}
+      module_repo: ${{ github.event.repository.name }}
